Use a quuid for unnamed clipboard brushes

Instead of the date.

BUG:440435